# enV5.2-hardware-test

./: .gitignore  CMakeLists.txt  README.adoc  helper.cmake  requirements.txt
scripts/: BinFileUpload.py
scripts/bin_files/s50/: readme.md
scripts/bin_files/s50/blink_fast/: led_test.bit
scripts/bin_files/s50/blink_slow/: led_test.bit
src/: CMakeLists.txt  ExtensionBoard.c  HardwareTest.c  MainBoard_Basic.c  MainBoard_Full.c
src/microphone/: CMakeLists.txt  Microphone.c
src/microphone/include/: Microphone.h
